# sphinx-llms-txt-link

./: .readthedocs.yaml  .secrets.baseline  Makefile  README.rst  pyproject.toml  sphinx_llms_txt_link.py  tests.py
assets/: sphinx_llms_txt_link.css
